data/derived/sp14/progs/unify/prog3024.ml.out
Characters 33-34:
  let _ = fixpoint ((fun b -> b ** 2), 0.);;
                                   ^
Error: This expression has type int but an expression was expected of type
         float
